tests/expectations/compiler/records/duplicate_circuit_name_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372008]: record `Token` shadowed by
    --> compiler-test:11:5
     |
  11 |     struct Token { // This struct cannot have the same name as the record defined above it.
  12 |         x: u32,
  13 |     }
     |     ^
"""]
